@@ -1,3 +1,4 @@
+  - make form input label ids optional (monte)
   - add error message for empty if/elseif statements (eykanal,
     monte)
   - cast selected value to string for comparison in html_radios
